--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,8 @@
 # Folders to ignore - files may be too large, too many, etc. NOTE: EDIT IF NEEDED.
 /data
 /videos
-/plots
 /notebooks
-/_research
+tmp
 
 ################################################################################
 #                                    Julia                                     #
