--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,9 @@
 name = "tnr"
-[compat]
-julia = "1.10.0"
-DrWatson = "2.18.0"
+
 [deps]
 DrWatson = "634d3b9d-ee7a-5ddf-bec9-22491ea816e1"
+LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
+
+[compat]
+DrWatson = "2.18.0"
+julia = "1.10.0"
